Fixed bottom spacing styles

--- a/static/style.css
+++ b/static/style.css
@@ -17,11 +17,6 @@
   color: var(--background);
 }
 
-html,
-body {
-  height: 100%;
-}
-
 body {
   background-color: var(--background);
   border-top: solid 5px var(--accent);
